Updating our details on About Me

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>As previously stated my name is Dexter Sage. Keep on reading for more riveting information.  </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was raised in Marysville, Washington on a horse farm on a hill. I have lived here my whole life and plan on staying in the area fro the forceable future. This area of the world is beautiful, with great weather and an even better veiw.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I have several hobbies that I enjoy. Hiking while listening to books is one of my favorites. Playing veideo games has always been an escape for me and a wat to meet new people. I also do enjoy studying philosophy and engaging in the art of debate.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is one in which I can make a lot of money. I have worked jobs that I hate and soem that i actually liked to some degree, but in the end its was the paycheck that really made the difference. A job that had some leadership role for me and potentially in the finance sector.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Reference "Where I'm From".</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>All I "want" is to be successful in my work. Becoming a web developer was an opportunity and I took it.</p>
     </section>
 
     <footer id="footer">
